modifying css to align buttons correctly

--- a/public/resources/index.css
+++ b/public/resources/index.css
@@ -98,6 +98,8 @@ section{
 .details p {
   padding:0;
   margin:18px 0;
+  width: 530px;
+  overflow: hidden;
 }
 .viewers {
   float:right;
